[gd_scene load_steps=9 format=3 uid="uid://daanafqeo0wv2"]

[ext_resource type="Script" uid="uid://dlgjh4ab8fpyb" path="res://scenes/animal.gd" id="1_ieass"]
[ext_resource type="Texture2D" uid="uid://dplfqy5csqafm" path="res://assets/player/parrot.png" id="1_rsu6n"]
[ext_resource type="Texture2D" uid="uid://ld1ucjqkwowc" path="res://assets/items/arrow.png" id="2_8dtbx"]
[ext_resource type="AudioStream" uid="uid://bmu243wuhmcrh" path="res://assets/audio/kick_wood.ogg" id="3_3c5tq"]
[ext_resource type="AudioStream" uid="uid://b5f5seu34mi1f" path="res://assets/audio/stretch2.ogg" id="4_ieass"]
[ext_resource type="AudioStream" uid="uid://bx43ahcn8xrer" path="res://assets/audio/catapult.ogg" id="5_d7epe"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_3c5tq"]
bounce = 0.1

[sub_resource type="CircleShape2D" id="CircleShape2D_rsu6n"]
radius = 20.0

[node name="Animal" type="RigidBody2D"]
input_pickable = true
physics_material_override = SubResource("PhysicsMaterial_3c5tq")
center_of_mass_mode = 1
freeze = true
contact_monitor = true
max_contacts_reported = 1
script = ExtResource("1_ieass")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.15, 0.15)
texture = ExtResource("1_rsu6n")

[node name="Arrow" type="Sprite2D" parent="."]
scale = Vector2(0.29743212, 0.30247998)
texture = ExtResource("2_8dtbx")
offset = Vector2(150, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(1.0116838, 0.947589)
shape = SubResource("CircleShape2D_rsu6n")

[node name="DebugLabel" type="Label" parent="."]
offset_left = -50.0
offset_top = -72.0
offset_right = 350.0
offset_bottom = 103.0
scale = Vector2(0.16000003, 0.16000003)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 128
text = "Debug"

[node name="KickSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_3c5tq")

[node name="StretchSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_ieass")
volume_db = -10.0

[node name="LaunchSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_d7epe")
volume_db = -10.0

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
